FIx mobile issue

--- a/css/index.css
+++ b/css/index.css
@@ -175,7 +175,7 @@ header {
 
 @media (max-width: 500px) {
     body {
-        background: linear-gradient(rgba(255, 255, 255, 0), rgb(8, 8, 8)), url("./img/img7.jpg");
+        background: linear-gradient(rgba(255, 255, 255, 0), rgb(8, 8, 8)), url("/img/img7.jpg");
         background-size: cover;
         height: fit-content;
         background-repeat: no-repeat;
