--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 {% if page.title != "Home" %}
 	<a href="./index.html">
 {% endif %}
-Elitetax
+Onetaxnation
 {% if page.title != "Home" %}
  </a> 
  {% endif %}
