--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@ Onetaxnation
         <div class="menu5"><a href="./miscellaneous.html">Miscellaneous</a></div>
         <div class="menu6"><a href="./book.html">Books Maintenance</a></div>
         <div class="menu7"><a href="">About</a></div>
+	<div class="menu8"><a href="./Blogs.html">Blogs</a></div>
     </div>
     <div class="mobilelist">
         <ul>
@@ -27,6 +28,7 @@ Onetaxnation
             <li><a href="./miscellaneous.html">Miscellaneous</a></li>
             <li><a href="./book.html">Books Maintenance</a></li>
             <li><a href="">About</a></li>
+	    <li><a href="./Blogs.html">Blogs</a></li>
         </ul>
     </div>
 	<div class="menusym">
