--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,9 @@
 body {
-    background: linear-gradient(rgba(255, 255, 255, 0), rgb(8, 8, 8)), url("/img/img5.jpg");
+    background: linear-gradient(rgb(8, 8, 8), rgb(14, 13, 13,0.7)), url("/img/img3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    color: aliceblue;
+    color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 html {
@@ -54,7 +53,6 @@ header {
 .allmenus a:hover {
     background: white;
     color: blue;
-
 }
 
 .menu1 {
@@ -142,7 +140,7 @@ header {
     position: absolute;
     font-size: 28px;
     left: 10%;
-    color: blue;
+    color:whitesmoke;
 }
 
 .contactnow1{
@@ -171,30 +169,85 @@ header {
     cursor: pointer;
 
 }
-
+marquee{
+    background: rgba(204, 204, 30, 0.8);
+    color: black;
+    padding: 10px;
+}
+.maindiv{
+    position: absolute;
+    top: 420px;
+}
+.maindiv{
+    position: relative;
+    width: 700px;
+    height: 250px;
+    
+}
+.card{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+    border-radius: 10%;
+}
+.card:hover{
+    transform: rotateY(180deg);
+}
+.front{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: gray;
+    color: #333;
+    border-radius: 9%;
+}
+.front img{
+    top: 0%;
+    width: 250px;
+    height: 200px;
+    border-radius: 10%;
+}
+.back{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background-color: rgb(11, 207, 54);
+    color: #333;
+    transform: rotateY(180deg);
+    border-radius: 10%;
+}
 
 @media (max-width: 500px) {
     body {
-        background: linear-gradient(rgba(255, 255, 255, 0), rgb(8, 8, 8)), url("/img/img7.jpg");
+        background: linear-gradient(rgba(8, 8, 8, 0.7), rgb(8, 8, 8)), url("/img/img7.jpg");
         background-size: cover;
         height: fit-content;
         background-repeat: no-repeat;
         color: whitesmoke;
         font-family: Arial, Helvetica, sans-serif;
-
-
-
     }
 
 
     header {
         position: relative;
-        padding-left: 35%;
+        padding-left: 30%;
         padding-right: 35%;
         top: 10px;
         font-size: 45px;
         color: white;
         cursor: pointer;
+    }
+    
+    marquee {
+        position: relative;
+        margin-top: 3%;
+        background: rgba(204, 204, 30, 0.4);
+        color: black;
     }
 
     .mobile {
@@ -230,16 +283,15 @@ header {
     }
 
     .menusym i {
-        position: absolute;
+        position: fixed;
+        top: 4%;
         left: 5%;
         font-size: 30px;
-        top: 4%;
         color: rgb(223, 213, 213);
         cursor: pointer;
     }
     .menusym i:hover {
         color: blue;
-
     }
 
     .mobilelist {
@@ -261,8 +313,8 @@ header {
         padding: 7px;
         margin-left: 0px;
         display: block;
-
-
+        border: outset;
+        border-radius: 10px;
     }
 
     ul li {
@@ -279,9 +331,10 @@ header {
     }
 
     .content1 {
-        position: absolute;
-        top: 20%;
-        left: 16%;
+        position: relative;
+        max-width: 80%;
+        margin-top: 2%;
+        margin-left: 8%;
         font-size: 30px;
         text-align: center;
         opacity: 0.6;
@@ -292,45 +345,48 @@ header {
     }
 
     .content2 {
-        position: absolute;
-        top: 35%;
-        left: 22%;
-        font-size: 35px;
+        position: relative;
+        max-width: 70%;
+        margin-top: 10%;
+        left: 13%;
+        font-size: 216%;
         text-align: center;
-        color: white;
+        color: rgb(14, 240, 89);
         text-align: center;
         cursor: pointer;
         display: block;
-
+        font-style: normal;
     }
 
     .content2 h5 {
-        position: absolute;
-        top: 90%;
-        left: 10%;
-        font-size: 19px;
-        opacity: 0.7;
+        position: relative;
+        left: 1%;
+        font-size: 16px;
+        opacity: 0.9;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         display: block;
+        color: rgb(234, 236, 230);
+        opacity: 0.7;
     }
 
     .contactnow {
-        position: absolute;
-        top: 80%;
-        left: 28%;
+        position: relative;
+        margin-top: 20%;
+        left: 25%;
         border: 2px solid;
         width: 150px;
         padding: 15px;
         text-align: center;
         cursor: pointer;
         display: block;
+        border-style: outset;
+        border-color: aqua;
+        border-bottom-style: solid;
     }
-
     .contactnow:hover {
         background: green;
         display: block;
     }
-
     .contactnow i {
         position: absolute;
         left: 7%;
@@ -338,10 +394,6 @@ header {
         font-size: 20px;
         display: block;
 
-    }
-
-    .contactnow i:hover {
-        color: blue;
     }
     .content3{
         display: none;
