--- a/css/all.css
+++ b/css/all.css
@@ -1,7 +1,7 @@
 body {
-    color: black;
+    color: green;
     font-family: Arial, Helvetica, sans-serif;
-    background: lightgrey;
+    background: rgb(20, 19, 19);
 }
 
 html {
@@ -14,13 +14,14 @@ header {
     font-size: 60px;
     left: 20px;
     right: 20px;
+}
 
+header a {
+    text-decoration: none;
+    color: whitesmoke;
 }
-header a{
-text-decoration: none;
-color: black;      
-}
-header a:hover{
+
+header a:hover {
     color: blue;
     cursor: pointer;
 }
@@ -53,12 +54,12 @@ header a:hover{
 
 .allmenus a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .allmenus a:hover {
-    background:lightgreen;
-    color: blue;
+    background: rgb(14, 236, 14);
+    color: black;
 
 }
 
@@ -110,319 +111,186 @@ header a:hover{
     padding: 10px;
     left: 82%;
 }
- .gstcontent{
-     position: relative;
-     top: 50px;
-     left: 20px;
-     font-size: 20px;
-     cursor: pointer;
 
- }
- .gstcontent i{
-     color: green;
-     font-size: 30px;
- }
- .gstcontent img{
-     position: absolute;
-     left: 53%;
-     top: 3%;
-     border: 2px solid;
-     width: 500px;
-     height: 200px;
- }
- .gstcontent button{
-     position: absolute;
-     font-size: 20px;
-     top: 80%;
-     left: 66%;
-     color: white;
-     background: black;
- }
- .gstreturn{
+.main {
     position: relative;
-    top: 40px;
-    left: 20px;
-    font-size: 20px;
-
-
-    
- }
- .gstreturn i{
-     color: green;
-     font-size: 30px;
- }
- .gstreturn img{
-    position: absolute;
-    left: 53%;
-    top: 5%;
-    border: 2px solid;
-    width: 500px;
-    height: 200px;
+    margin-top: 120px;
+    margin-left: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: block;
 }
-.gstreturn button{
-    position: absolute;
-    font-size: 20px;
-    top: 79%;
-    left: 66%;
-    color: white;
-    background: black;
-}
-.appeals{
+
+.maindiv {
     position: relative;
-    top: 20px;
-    left: 20px;
-    font-size: 23px;
-
-
-    
- }
- .appeals i{
-     color: green;
-     font-size: 30px;
- }
- .appeals img{
-    position: absolute;
-    left: 53%;
-    top: 7%;
-    border: 2px solid;
-    width: 500px;
-    height: 200px;
-}
-.appeals button{
-    position: absolute;
-    font-size: 20px;
-    top: 90%;
-    left: 68%;
-    color: white;
-    background: black;
-}
-.refund{
-    position: relative;
-    top: 20px;
-    left: 20px;
-    font-size: 23px;
-
-
-    
- }
- .refund i{
-     color: green;
-     font-size: 30px;
- }
- .refund img{
-    position: absolute;
-    left: 53%;
-    top: 7%;
-    border: 2px solid;
-    width: 500px;
-    height: 200px;
-}
-.refund button{
-    position: absolute;
-    font-size: 20px;
-    top: 90%;
-    left: 68%;
-    color: white;
-    background: black;
-}
-.Cost{
-    position: relative;
-    top: 50px;
-    left: 20px;
-    font-size: 23px;
-    cursor: pointer;
-
-}
-.Cost i{
-    color: green;
-    font-size: 30px;
-}
-.Cost img{
-    position: absolute;
-    left: 53%;
-    top: 5%;
-    border: 2px solid;
-    width: 500px;
-    height: 200px;
-}
-.Cost button{
-    position: absolute;
-    font-size: 20px;
-    top: 80%;
-    left: 66%;
-    color: white;
-    background: black;
-}
-.Internal{
-   position: relative;
-   top: 20px;
-   left: 20px;
-   font-size: 23px;
-
-
-   
-}
-.Internal i{
-    color: green;
-    font-size: 30px;
-}
-.Internal img{
-   position: absolute;
-   left: 53%;
-   top: 15%;
-   border: 2px solid;
-   width: 500px;
-   height: 200px;
-}
-.Internal button{
-   position: absolute;
-   font-size: 20px;
-   top: 79%;
-   left: 66%;
-   color: white;
-   background: black;
-}
-.Management{
-   position: relative;
-   top: 20px;
-   left: 20px;
-   font-size: 23px;
-
-
-   
-}
-.Management i{
-    color: green;
-    font-size: 30px;
-}
-.Management img{
-   position: absolute;
-   left: 53%;
-   top: 7%;
-   border: 2px solid;
-   width: 500px;
-   height: 200px;
-}
-.Management button{
-   position: absolute;
-   font-size: 20px;
-   top: 90%;
-   left: 68%;
-   color: white;
-   background: black;
-}
-/* PF & ESI*/
-.Insurance{
-    position: relative;
-    top: 70px;
-    left: 20px;
-    font-size: 23px;
-    cursor: pointer;
-
-}
-.Insurance i{
-    color: green;
-    font-size: 30px;
-}
-.Insurance img{
-    position: absolute;
-    left: 58%;
-    top: 17%;
-    border: 2px solid;
-    width: 500px;
-    height: 200px;
-}
-.Insurance button{
-    position: absolute;
-    font-size: 20px;
-    top: 100%;
-    left: 68%;
-    color: white;
-    background: black;
-}
-/* provident */
-.Provident{
-   position: relative;
-   top: 100px;
-   left: 20px;
-   font-size: 23px;
-
-
-   
-}
-.Provident i{
-    color: green;
-    font-size: 30px;
-}
-.Provident img{
-   position: absolute;
-   left: 57%;
-   top: 15%;
-   border: 2px solid;
-   width: 500px;
-   height: 200px;
-}
-.Provident button{
-   position: absolute;
-   font-size: 20px;
-   top: 90%;
-   left: 68%;
-   color: white;
-   background: black;
-}
-.incometax{
-    position: relative;
-    top:    110px;
-    left: 20px;
-    font-size: 23px;
-    cursor: pointer;
-
-}
-.incometax i{
-    color: green;
-    font-size: 30px;
-}
-.incometax img{
-    position: absolute;
-    left: 53%;
-    top: 10%;
-    border: 2px solid;
-    width: 550px;
+    display: flex;
+    flex-direction: row;
+    width: 900px;
     height: 250px;
+    padding: 0px;
+    margin: 5%;
+
 }
-.incometax button{
+
+.card1 {
+    position: relative;
+    top: 20px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 0.9s ease;
+    border-radius: 0%;
+
+}
+
+.card2 {
+    position: relative;
+    top: 20px;
+    left: 100px;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 0.9s ease;
+    border-radius: 0%;
+
+}
+
+.card3 {
+    position: relative;
+    top: 20px;
+    left: 190px;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 0.9s ease;
+    border-radius: 0%;
+
+}
+
+
+.card1:hover {
+    transform: rotateY(180deg);
+}
+
+.card2:hover {
+    transform: rotateY(180deg);
+}
+
+.card3:hover {
+    transform: rotateY(180deg);
+}
+
+
+.front {
     position: absolute;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgba(239, 243, 245, 0.7);
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+    color: darkgreen;
     font-size: 20px;
-    top: 80%;
-    left: 68%;
-    color: white;
-    background: black;
 }
+
+.front button {
+    position: absolute;
+    top: 75%;
+    left: 20%;
+    height: 40px;
+    width: 120px;
+    margin: 0 35px;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+}
+
+.back button {
+    position: absolute;
+    top: 75%;
+    left: 20%;
+    height: 40px;
+    width: 120px;
+    margin: 0 35px;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+}
+
+.back {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    backface-visibility: hidden;
+    background: rgba(14, 13, 13, 0.7);
+    color: #333;
+    transform: rotateY(180deg);
+    border-radius: 0%;
+    color: chartreuse;
+}
+
+.process {
+    position: relative;
+    top: 14px;
+    left: 800px;
+
+}
+
+.document {
+    position: absolute;
+    top: 7%;
+    left: 10%;
+}
+
+.plans {
+    position: relative;
+    top: 20px;
+    left: 480px;
+    font-size: 30px;
+}
+
+
 
 
 
 @media (max-width: 500px) {
     body {
-        
-        color: black;
+        color: whitesmoke;
         font-family: Arial, Helvetica, sans-serif;
-        background: rgb(199, 196, 196);
+        background: rgb(41, 40, 40);
         cursor: pointer;
-        
-
+        background-size: cover;
+        height: fit-content;
+        border: outset;
+        height: 10%;
+        border-radius: 5%;
+        background-size: cover;
+        border-color: chartreuse;
+        border-style: inset;
     }
 
 
     header {
         position: relative;
-        padding-left: 35%;
-        padding-right: 35%;
-        top: 8px;
-        font-size: 45px;
-        color: white;
+        padding-left: 17%;
+        font-size: 50px;
         cursor: pointer;
     }
-    marquee{
+
+    header a {
+        color: rgb(212, 205, 205, 0.7);
+    }
+
+    marquee {
         cursor: pointer;
     }
 
@@ -460,15 +328,16 @@ header a:hover{
 
     .menusym i {
         position: absolute;
+        background-size: cover;
         left: 5%;
         font-size: 30px;
         top: 4%;
-        color: blue;
+        color: green;
         cursor: pointer;
     }
-    .menusym i:hover{
-        color: green;
-        background: white;
+
+    .menusym i:hover {
+        color: rgb(51, 13, 221);
     }
 
     .mobilelist {
@@ -481,18 +350,18 @@ header a:hover{
 
     .mobilelist ul li {
         position: relative;
-        top: 2px;
+        top: 50px;
         right: 40px;
         list-style-type: none;
-        background-color: rgb(208, 236, 206);
+        background-color: rgb(198, 221, 196);
         width: 145px;
         height: 14px;
         padding: 7px;
         margin-left: 0px;
         display: block;
         cursor: pointer;
-
-
+        border: outset;
+        border-radius: 10px;
     }
 
     ul li {
@@ -505,320 +374,157 @@ header a:hover{
     }
 
     ul li a:hover {
-        color:red;
+        color: fuchsia;
     }
-    .gstcontent{
+
+    .main {
         position: relative;
-        top: 10px;
-        left: 20px;
-        font-size: 13px;
-        cursor: pointer;
-   
+        margin-top: 80px;
+        left: 0px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-    .gstcontent i{
+
+    .maindiv {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        column-gap: 00px;
+        width: 300px;
+        height: 900px;
+        display: flex;
+        padding: 0px;
+        margin: 0%;
+    }
+
+
+    .card1 {
+        position: relative;
+        top: 80px;
+        left: 0px;
+        width: 90%;
+        height: 30%;
+        transform-style: preserve-3d;
+        transition: all 0.9s ease;
+        border-radius: 0%;
+    }
+
+    .card2 {
+        position: relative;
+        top: 70px;
+        left: 0px;
+        width: 90%;
+        height: 30%;
+        transform-style: preserve-3d;
+        transition: all 0.9s ease;
+        border-radius: 0%;
+    }
+
+    .card3 {
+        position: relative;
+        top: 70px;
+        left: 1px;
+        width: 90%;
+        height: 30%;
+        transform-style: preserve-3d;
+        transition: all 0.9s ease;
+        border-radius: 0%;
+
+    }
+
+    .card:hover {
+        transform: rotateY(180deg);
+    }
+
+    .front {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        font-family: Arial, Helvetica, sans-serif;
+        background: rgba(241, 235, 235, 0.7);
+        color: green;
+        text-align: center;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        text-transform: unset;
+    }
+
+    .front button {
+        position: absolute;
+        top: 75%;
+        left: 17%;
+        height: 40px;
+        width: 90px;
+        margin: 0 35px;
+        border-radius: 50px;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+    }
+
+    .back button {
+        position: absolute;
+        top: 75%;
+        left: 18%;
+        height: 40px;
+        width: 80px;
+        margin: 0 35px;
+        border-radius: 50px;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+    }
+
+    .back {
+        position: relative;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        background: rgba(12, 12, 12, 0.7);
+        color: greenyellow;
+        transform: rotateY(180deg);
+        border-radius: 0%;
+    }
+
+    .gst {
+        position: relative;
+        margin-top: 1%;
+        color: green;
+        font-size: 25px;
+    }
+
+    .process {
+        position: relative;
+        right: 0px;
+        left: 0px;
         color: green;
         font-size: 20px;
     }
-    .gstcontent img{
-        position: absolute;
-        left: 3%;
-        top: 110%;
-        border: 2px solid;
-        width: 320px;
-        height: 200px;
-        
+    .process h4{
+        font-size: 25px;
     }
-    .gstcontent button{
-        position: absolute;
-        font-size: 20px;
-        top: 220%;
-        left: 27%;
-        color: white;
-        background: black;
-    }
-    .gstreturn{
-       position: relative;
-       top: 290px;
-       left: 20px;
-       font-size: 13px;
-   
-   
-       
-    }
-    .gstreturn i{
+
+    .document {
+        position: relative;
+        left: 0px;
         color: green;
         font-size: 20px;
     }
-    .gstreturn img{
-        position: absolute;
-        left: 2%;
-        top: 98%;
-        border: 2px solid;
-        width: 320px;
-        height: 200px;
- 
-   }
-   .gstreturn button{
-    position: absolute;
-    font-size: 20px;
-    top: 220%;
-    left: 27%;
-    color: white;
-    background: black;
 
-   }
-   .appeals{
-       position: relative;
-       top: 560px;
-       left: 20px;
-       font-size: 13px;
-       
-   
-   
-       
+    .document h4{
+        font-size: 25px;
     }
-    .appeals i{
+
+    .plans {
+        position: relative;
+        width: 350px;
+        left: 1px;
+        font-size: 25px;
         color: green;
-        font-size: 20px;
+        font-style: oblique;
     }
-    .appeals img{
-        position: absolute;
-        left: 2%;
-        top: 98%;
-        border: 2px solid;
-        width: 320px;
-        height: 200px;
- 
-
-   }
-   .appeals button{
-       position: absolute;
-       font-size: 20px;
-       top: 250%;
-       left: 27%;
-       color: white;
-       background: black;
-   }
-   .refund{
-       position: relative;
-       top: 830px;
-       left: 20px;
-       font-size: 13px;
-   
-   
-       
-    }
-    .refund i{
-        color: green;
-        font-size: 20px;
-    }
-    .refund img{
-       position: absolute;
-       left: 2%;
-       top: 98%;
-       border: 2px solid;
-       width: 320px;
-       height: 200px;
-   }
-   .refund button{
-       position: absolute;
-       font-size: 20px;
-       top: 240%;
-       left: 27%;
-       color: white;
-       background: black;
-       
-   }
-   hr{
-       width: 00px;
-       margin-right: 0px;
-       margin-left: 0px;
-       
-   }
-   .Cost{
-    position: relative;
-    top: 10px;
-    left: 20px;
-    font-size: 13px;
-    cursor: pointer;
 
 }
-.Cost i{
-    color: green;
-    font-size: 20px;
-}
-.Cost img{
-    position: absolute;
-    left: 3%;
-    top: 110%;
-    border: 2px solid;
-    width: 320px;
-    height: 200px;
-    
-}
-.Cost button{
-    position: absolute;
-    font-size: 20px;
-    top: 240%;
-    left: 27%;
-    color: white;
-    background: black;
-}
-.Internal{
-   position: relative;
-   top: 290px;
-   left: 20px;
-   font-size: 13px;
-
-
-   
-}
-.Internal i{
-    color: green;
-    font-size: 20px;
-}
-.Internal img{
-    position: absolute;
-    left: 3%;
-    top: 109%;
-    border: 2px solid;
-    width: 320px;
-    height: 200px;
-
-}
-.Internal button{
-position: absolute;
-font-size: 20px;
-top: 220%;
-left: 24%;
-color: white;
-background: black;
-
-}
-.Management{
-   position: relative;
-   top: 570px;
-   left: 20px;
-   font-size: 13px;
-   
-
-
-   
-}
-.Management i{
-    color: green;
-    font-size: 20px;
-}
-.Management img{
-    position: absolute;
-    left: 3%;
-    top: 109%;
-    border: 2px solid;
-    width: 320px;
-    height: 200px;
-    
-
-
-}
-
-.Management button{
-   position: absolute;
-   font-size: 20px;
-   top: 225%;
-   left: 22%;
-   color: white;
-   background: black;
-}
-.Insurance{
-    position: relative;
-    top: 10px;
-    left: 20px;
-    font-size: 13px;
-    cursor: pointer;
-
-}
-.Insurance i{
-    color: green;
-    font-size: 20px;
-}
-.Insurance img{
-    position: absolute;
-    left: 3%;
-    top: 100%;
-    border: 2px solid;
-    width: 320px;
-    height: 150px;
-    
-}
-.Insurance button{
-    position: absolute;
-    font-size: 20px;
-    top: 210%;
-    left: 14%;
-    color: white;
-    background: black;
-}
-
-.Provident{
-   position: relative;
-   top: 250px;
-   left: 20px;
-   font-size: 13px;
-  
-}
-.Provident i{
-    color: green;
-    font-size: 20px;
-}
-.Provident img{
-    position: absolute;
-    left: 3%;
-    top: 105%;
-    border: 2px solid;
-    width: 320px;
-    height: 150px;
-    
-}
-.Provident button{
-   position: absolute;
-   font-size: 20px;
-   top: 198%;
-   left: 20%;
-   color: white;
-   background: black;
-}
-.incometax{
-    position: relative;
-    top: 10px;
-    left: 20px;
-    font-size: 13px;
-    cursor: pointer;
-    
-
-}
-.incometax i{
-    color: green;
-    font-size: 20px;
-}
-.incometax img{
-    position: absolute;
-    left: 6%;
-    top: 105%;
-    border: 2px solid;
-    width: 320px;
-    height: 150px;
-    
-}
-.incometax button{
-    position: absolute;
-    font-size: 20px;
-    top: 175%;
-    left: 26%;
-    color: white;
-    background: black;
-}
-
-
-
-}
-
