--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 
 <header>
-    <a href="./index.html">
+    <div class="menusym">
+        <i class="fa-solid fa-bars"> </i>
+    </div>
+    <a href="/index.html">
         1taxnation
     </a> 
      <div class="mobile">{{page.phoneno}}</div>
@@ -8,26 +11,24 @@
 </header>
    
     <div class="allmenus">
-        <div class="menu1"><a href="./gst.html"> GST </a></div>
-        <div class="menu2"><a href="./audit.html">Audit Service </a></div>
-        <div class="menu3"><a href="./incometax.html">Income Tax </a></div>
-        <div class="menu4"><a href="./pf&esi.html">PF & ESI</a></div><br>
-        <div class="menu5"><a href="./miscellaneous.html">Miscellaneous</a></div>
-        <div class="menu6"><a href="./book.html">Books Maintenance</a></div>
+        <div class="menu1"><a href="/gst.html"> GST </a></div>
+        <div class="menu2"><a href="/audit.html">Audit Service </a></div>
+        <div class="menu3"><a href="/incometax.html">Income Tax </a></div>
+        <div class="menu4"><a href="/pf&esi.html">PF & ESI</a></div><br>
+        <div class="menu5"><a href="/miscellaneous.html">Miscellaneous</a></div>
+        <div class="menu6"><a href="/book.html">Books Maintenance</a></div>
         <div class="menu7"><a href="/blog.html">Blogs</a></div>
     </div>
-    <div class="menusym">
-        <i class="fa-solid fa-list-check"> </i>
-    </div>
+    
     
     <div class="mobilelist">
         <ul>
-            <li><a href="./gst.html"> GST </a></li>
-            <li><a href="./audit.html">Audit Service </a></li>
-            <li><a href="./incometax.html">IncomeTax </a></li>
-            <li><a href="./pf&esi.html">PF & ESI</a></li>
-            <li><a href="./miscellaneous.html">Miscellaneous</a></li>
-            <li><a href="./book.html">Books Maintenance</a></li>
+            <li><a href="/gst.html"> GST </a></li>
+            <li><a href="/audit.html">Audit Service </a></li>
+            <li><a href="/incometax.html">IncomeTax </a></li>
+            <li><a href="/pf&esi.html">PF & ESI</a></li>
+            <li><a href="/miscellaneous.html">Miscellaneous</a></li>
+            <li><a href="/book.html">Books Maintenance</a></li>
             <li><a href="/blog.html">Blogs</a></li>
         </ul>
     </div>
