--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,3 @@
----
-title: 1taxnation
-phoneno: +91 90000 46136
-email: 1taxnation@gmail.com
----
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -17,7 +12,7 @@ email: 1taxnation@gmail.com
         <script src="/js/index.js"> </script>
         <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
     </head>
-    <body >
+    <body class="page">
         <div class="home">
             {% include header.html %}
             <div class="box">
