--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,17 @@
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
     display: grid;
     grid-template-columns: 60% auto auto;
     align-items: center;
+    color: white;
+    padding: 10px;
+
 }
+
 
 p {
     margin: 0px;
@@ -18,7 +27,26 @@ header a {
     margin: 20px;
     font-size: 22px;
 }
+.allmenus  {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+.allmenu-item-submenu {
+    position: absolute;
+    background: white;
+    color: black;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+} 
 
+.allmenu-item .allmenu-item-submenu{
+    display: none;
+}
+.allmenu-item:hover  .allmenu-item-submenu{
+    display: block;
+}
 .mobilelist {
     display: none;
     position: absolute;
@@ -87,7 +115,12 @@ header a {
     background: white;
     color: blue;
 }
-
+.allmenu-item-submenu a {
+    color: black;
+    font-size: 16px;
+    padding: 5px;
+    display: block;
+}
 
 @media (max-width:500px) {
     header {
@@ -191,11 +224,8 @@ footer{
     background: #999;
     padding: 10px;
 }
-a.contact-now {
-    text-decoration: none;
-    color: whitesmoke;
-}
+
 .container {
-    padding: 10px 10%;
+    padding: 10px ;
 
   }
