--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,9 @@
+
 .home {
     background: linear-gradient(rgb(8, 8, 8), rgb(14, 13, 13, 0.7)), url("/img/img3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    color: whitesmoke;
-    padding: 10px;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
-html {
-    height: 100%;
+  
 }
 
 .scroll {
@@ -113,7 +107,6 @@ marquee {
     position: relative;
     border: 2px solid;
     width: 150px;
-    padding: 15px;
     text-align: center;
     cursor: pointer;
     display: block;
@@ -121,7 +114,12 @@ marquee {
     border-color: aqua;
     border-bottom-style: solid;
 }
-
+a.contact-now {
+    text-decoration: none;
+    color: whitesmoke;
+        padding: 15px;
+    display: block;
+}
 .contactnow:hover {
     background: green;
     display: block;
