--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,34 +1,42 @@
-
 <header>
     <div class="menusym">
         <i class="fa-solid fa-bars"> </i>
     </div>
     <a href="/index.html">
         1taxnation
-    </a> 
-     <div class="mobile">{{page.phoneno}}</div>
-    <div class="email">{{page.email}}</div>
+    </a>
+    <div class="mobile">{{site.data.header.phoneno}}</div>
+    <div class="email">{{site.data.header.email}}</div>
 </header>
-   
-    <div class="allmenus">
-        <div class="menu1"><a href="/gst.html"> GST </a></div>
-        <div class="menu2"><a href="/audit.html">Audit Service </a></div>
-        <div class="menu3"><a href="/incometax.html">Income Tax </a></div>
-        <div class="menu4"><a href="/pf&esi.html">PF & ESI</a></div><br>
-        <div class="menu5"><a href="/miscellaneous.html">Miscellaneous</a></div>
-        <div class="menu6"><a href="/book.html">Books Maintenance</a></div>
-        <div class="menu7"><a href="/blog.html">Blogs</a></div>
-    </div>
-    
-    
-    <div class="mobilelist">
-        <ul>
-            <li><a href="/gst.html"> GST </a></li>
-            <li><a href="/audit.html">Audit Service </a></li>
-            <li><a href="/incometax.html">IncomeTax </a></li>
-            <li><a href="/pf&esi.html">PF & ESI</a></li>
-            <li><a href="/miscellaneous.html">Miscellaneous</a></li>
-            <li><a href="/book.html">Books Maintenance</a></li>
-            <li><a href="/blog.html">Blogs</a></li>
-        </ul>
-    </div>
+
+<ul class="allmenus">
+    {% for navigation in site.data.navigation %}
+        <li class="allmenu-item">
+            <a href="/{{ navigation.link }}">
+                {{ navigation.title }}
+            </a>
+            <ul class="allmenu-item-submenu">
+                {% for submenuItem in navigation.submenu %}
+                    <li class="allmenu-item-submenu-item">
+                        <a href="/{{ submenuItem.link }}">
+                            {{ submenuItem.title }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </li>
+    {% endfor %}
+</ul>
+
+
+<div class="mobilelist">
+    <ul>
+        {% for navigation in site.data.navigation %}
+            <li>
+                <a href="/{{ navigation.link }}">
+                    {{ navigation.title }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
