--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -8,18 +8,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
         <title>{{page.title}}</title>
+        <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/common.css">
-        <link rel="stylesheet" href="/css/all.css">
+        <link rel="stylesheet" href="/css/inner.css">
 
         <script src="/js/jquery-3.6.0.min.js"> </script>
         <script src="/js/index.js"> </script>
         <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
     </head>
-    <body>
-    {% include header.html %}
-    <div class="container">
-        {{content}}
-    </div>
-
-</body>
+    <body class="page">
+        <div>
+        {% include header.html %}
+        <div class="container">
+            {{content}}
+        </div>
+        {% include footer.html %}
+        </div>
+    </body>
 </html>
