--- a/css/inner.css
+++ b/css/inner.css
@@ -1,25 +1,25 @@
 body {
     color: green;
-    font-family: Arial, Helvetica, sans-serif;
     background: rgb(20, 19, 19);
 }
-
-html {
-    height: 100%;
-}
-
 
 
 header a:hover {
     color: blue;
     cursor: pointer;
 }
-
-
+.card h5{
+    padding: 5px;
+    margin: 0px;
+}
+.card li{
+    text-transform: capitalize ;
+}
+.card .front{
+    padding: 10px;
+}
 .main {
     position: relative;
-    margin-top: 120px;
-    margin-left: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: block;
 }
@@ -28,19 +28,16 @@ header a:hover {
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 900px;
     height: 250px;
-    padding: 0px;
-    margin: 5%;
+    justify-content: space-around;
+    padding: 10px;
+
 
 }
 
 .card1 {
     position: relative;
-    top: 20px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
+  
     transform-style: preserve-3d;
     transition: all 0.9s ease;
     border-radius: 0%;
@@ -49,10 +46,7 @@ header a:hover {
 
 .card2 {
     position: relative;
-    top: 20px;
-    left: 100px;
-    width: 100%;
-    height: 100%;
+
     transform-style: preserve-3d;
     transition: all 0.9s ease;
     border-radius: 0%;
@@ -61,10 +55,7 @@ header a:hover {
 
 .card3 {
     position: relative;
-    top: 20px;
-    left: 190px;
-    width: 100%;
-    height: 100%;
+   
     transform-style: preserve-3d;
     transition: all 0.9s ease;
     border-radius: 0%;
@@ -86,9 +77,7 @@ header a:hover {
 
 
 .front {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+  
     backface-visibility: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background: rgba(239, 243, 245, 0.7);
@@ -103,7 +92,6 @@ header a:hover {
 }
 
 .front button {
-    position: absolute;
     top: 75%;
     left: 20%;
     height: 40px;
@@ -116,7 +104,6 @@ header a:hover {
 }
 
 .back button {
-    position: absolute;
     top: 75%;
     left: 20%;
     height: 40px;
@@ -130,6 +117,7 @@ header a:hover {
 
 .back {
     position: relative;
+    top: 0%;
     height: 100%;
     width: 100%;
     text-align: center;
@@ -143,33 +131,24 @@ header a:hover {
 }
 
 .process {
-    position: relative;
-    top: 14px;
-    left: 800px;
-
+   
 }
 
 .document {
-    position: absolute;
-    top: 7%;
-    left: 10%;
+
 }
 
 .plans {
     position: relative;
     top: 20px;
-    left: 480px;
     font-size: 30px;
 }
 
 
 
 
-
 @media (max-width: 500px) {
-    body {
-      
-    }
+ 
 
 
     marquee {
@@ -235,7 +214,6 @@ header a:hover {
     }
 
     .front {
-        position: absolute;
         width: 100%;
         height: 100%;
         backface-visibility: hidden;
@@ -250,7 +228,6 @@ header a:hover {
     }
 
     .front button {
-        position: absolute;
         top: 75%;
         left: 17%;
         height: 40px;
@@ -263,7 +240,6 @@ header a:hover {
     }
 
     .back button {
-        position: absolute;
         top: 75%;
         left: 18%;
         height: 40px;
@@ -276,9 +252,9 @@ header a:hover {
     }
 
     .back {
-        position: relative;
-        text-align: center;
         position: absolute;
+        top: 0%;
+        text-align: center;
         width: 100%;
         height: 100%;
         backface-visibility: hidden;
