--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
     <title>{{page.title}}</title>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/inner.css">
     <link rel="stylesheet" href="/css/all.css">
     <script src="/js/jquery-3.6.0.min.js"> </script>
     <script src="/js/index.js"> </script>
@@ -21,7 +22,7 @@
   <body>
     {% include header.html %}
   </head>
-  <body>
+  <body class="page">
     <div class="container">
       <h1>{{ page.title }}</h1>
       <section>
