FIx mulitple issues

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,8 @@
     <script src="/js/jquery-3.6.0.min.js"> </script>
     <script src="/js/index.js"> </script>
     <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
-    <style type="text/css">
-    .container {
-    padding: 10px 10%;
-    }
-    </style>
+    {% seo %}
+    
   </head>
   <body>
     {% include header.html %}
