--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -15,6 +15,7 @@
         <script src="/js/jquery-3.6.0.min.js"> </script>
         <script src="/js/index.js"> </script>
         <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
+        {% seo %}
     </head>
     <body class="page">
         <div>
