--- a/css/common.css
+++ b/css/common.css
@@ -46,6 +46,7 @@ header a {
 }
 .allmenu-item:hover  .allmenu-item-submenu{
     display: block;
+    z-index: 1;
 }
 .mobilelist {
     display: none;
@@ -126,6 +127,26 @@ header a {
     display: flex;
 }
 
+.box {
+    height: 100%;
+}
+footer{
+    background: #999;
+    padding: 10px;
+}
+.container {
+    padding: 10px 10%;
+}
+.section {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.section img{
+        width: 420px;
+    }
+.section .details-item {
+    padding: 5px;
+}
 @media (max-width:500px) {
     header {
         display: grid;
@@ -139,18 +160,14 @@ header a {
     }
 
     .mobile {
-        position: absolute;
-        top: 2%;
-        left: 50%;
-        font-size: 10px;
-        display: none;
+        
+        font-size: 16px;
+    grid-column: 1/3;
+    text-align: center;
     }
 
     .email {
-        position: absolute;
-        top: 2%;
-        left: 70%;
-        font-size: 10px;
+        
         display: none;
     }
 
@@ -218,18 +235,11 @@ header a {
     ul li a:hover {
         color: fuchsia;
     }
+    .section {
+        grid-template-columns:100%;
+    }
+    .section img{
+        width: 100%;
+    }
 
 }
-
-.box {
-    height: 100%;
-}
-footer{
-    background: #999;
-    padding: 10px;
-}
-
-.container {
-    padding: 10px ;
-
-  }
