--- a/css/common.css
+++ b/css/common.css
@@ -9,19 +9,17 @@ header {
     align-items: center;
     color: white;
     padding: 10px;
-
 }
 
-
-p {
-    margin: 0px;
-}
 header a {
     text-decoration: none;
     color: whitesmoke;
     font-size: 40px;
 }
 
+p {
+    margin: 0px;
+}
 .allmenus {
     position: relative;
     margin: 20px;
@@ -158,16 +156,19 @@ footer{
         color: rgb(212, 205, 205, 0.7);
         text-align: center;
     }
-
+     .mobilelist .allmenu-item-submenu {
+        position: relative;
+     }
+    .mobilelist .allmenu-item-submenu li {
+        padding: 2px;
+    }
     .mobile {
-        
         font-size: 16px;
-    grid-column: 1/3;
-    text-align: center;
+        grid-column: 1/3;
+        text-align: center;
     }
 
     .email {
-        
         display: none;
     }
 
@@ -203,18 +204,12 @@ footer{
         display: none;
     }
 
-    .mobilelist ul {
-        display: hide;
-    }
 
     .mobilelist ul li {
         position: relative;
-        top: -7px;
-        right: 40px;
         list-style-type: none;
         background-color: rgb(198, 221, 196);
         width: 145px;
-        height: 14px;
         padding: 7px;
         margin-left: 0px;
         display: block;
@@ -223,6 +218,9 @@ footer{
         border-radius: 10px;
     }
 
+    .mobilelist .allmenu-item-submenu{
+
+    }
     ul li {
         font-display: block;
     }
